Created:  - Base url from api.
Altered:
 - Moved MainActivity to view package.

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -20,6 +20,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "API_ENDPOINT", "\"$rootProject.ext.apiRelease/\""
+        }
+        debug {
+            buildConfigField "String", "API_ENDPOINT", "\"$rootProject.ext.apiStaging/\""
         }
     }
 
