--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext {
         // Api EndPoint
-        apiRelease = ""
-        apiStaging = ""
+        apiRelease = "https://pokeapi.co/api/v2"
+        apiStaging = "https://pokeapi.co/api/v2"
 
         // Kotlin
         kotlinVersion = '1.3.72'
