--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ buildscript {
         // MultiDex
         multiDexVersion = '2.0.1'
 
+        // Navigation
+        navVersion = '2.2.2'
+        navSafeArgs = '2.1.0'
+
         // Coroutine
         coroutinesVersion = '1.3.2'
         coroutinesCoreVersion = '1.3.2'
@@ -48,8 +52,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navSafeArgs"
     }
 }
 
